overflow fix

--- a/client/src/style/css/DividasShowComponent.css
+++ b/client/src/style/css/DividasShowComponent.css
@@ -293,7 +293,7 @@ body {
     position: relative;
     overflow: hidden;
     height: 100%;
-    margin-top: -1.5%;
+    margin-top: -2.5%;
   }
 
   #dividasshowid {
